rewrote the DropDown function however due to adding media queiries the header is not working will fix in the morning. But I added two stretch features such as liekd and watched I will also tweak in the morning.

--- a/src/COMPONENTS/MOVIECARD/MovieCard.css
+++ b/src/COMPONENTS/MOVIECARD/MovieCard.css
@@ -17,3 +17,14 @@ max-width: 200px;;
      transform: scale(1.05);
 
 }
+
+.fav-button {
+  background: none;
+  border: none;
+  font-size: 24px;
+  cursor: pointer;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
+
