--- a/src/index.css
+++ b/src/index.css
@@ -19,10 +19,93 @@ button:hover {
 }
 
 header{
-  background-color: rgb(157, 16, 58);
+  background: linear-gradient(to bottom, #0b0b2b, #1b2735 70%, #090a0f);
   color: aliceblue;
   text-align: center;
 }
+
+footer{
+  background-color: rgb(157, 16, 58);
+  color: aliceblue;
+  text-align:end;
+}
+
+.banner {
+  background-image: url("assets/banner.jpg"); /* or whatever your corrected filename is */
+  background-size: cover;
+  background-position: center;
+  height: 300px; /* set a visible height */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+  font-size: 2rem;
+  text-shadow: 2px 2px 5px rgba(0,0,0,0.7);
+}
+
+.banner-content{
+  padding-left: 897rem;
+  margin-left: 8rem;
+  padding: 25%;
+
+}
+
+@media  (min-width: 600px) {
+/*Tablet*/
+  .playlist-card {
+    width: 45%;
+    margin: 1rem auto;
+  }
+
+  .banner h2 {
+    font-size: 2rem;
+    padding-left: 2rem;
+  }
+
+  .movie-modal {
+    width: 80%;
+    max-height: 90vh;
+  }
+}
+
+@media (min-width: 900px) {
+  /*Desktop*/
+  .playlist-card {
+    width: 30%;
+    display: inline-block;
+    margin: 1rem;
+  }
+
+  .playlist-cards {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  .banner h2 {
+    font-size: 2.5rem;
+    text-align: left;
+    padding-left: 4rem;
+  }
+
+  .drop-down-bar {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 1rem;
+  }
+
+  .filter {
+    font-size: 1rem;
+    padding: 0.5rem;
+    margin-left: 0.5rem;
+  }
+
+  .movie-modal {
+    width: 60%;
+    padding: 2rem;
+  }
+}
+
 
 
 
